# mlx-finetune

./: .gitignore  README.md  create_sample_data.py  download_model.py  generate_data.py  main.py  pyproject.toml  start_training.sh
configs/: base.yaml  customer_support_style_nim.yaml  mentor_style_local.yaml  mentor_style_ollama.yaml  mentor_style_openai.yaml  style_transfer_small.yaml
examples/: customer_support_socialmedia.jsonl  warm_mentor.jsonl
finetune/: __init__.py  config.py
finetune/generation/: examples.py  prompt_builder.py  quality.py
finetune/teacher/: base.py  local_mlx.py  openai_api.py
seeds/: customer_support.txt  general_knowledge.txt  style_transfer.txt  style_transfer_small.txt
